# popf

./: CHANGELOG.rst  CMakeLists.txt  README  README.md  build  package.xml  plan
.github/workflows/: workflow.yaml
src/: CMakeLists.txt
src/VALfiles/: .cvsignore  Action.cpp  Action.h  Analyser.h  CMakeLists.txt  Evaluator.h  Events.h  FastEnvironment.h  FuncExp.h  Ownership.h  Plan.cpp  Plan.h  Polynomial.cpp  Proposition.cpp  Proposition.h  RelaxTranslator.h  RepairAdvice.cpp  RobustAnalyse.h  SimpleEval.cpp  SimpleEval.h  TIM.cpp  TIM.h  TimSupport.cpp  TimSupport.h  ToFunction.h  TrajectoryConstraints.cpp  TrajectoryConstraints.h  TypedAnalyser.cpp  TypedAnalyser.h  Validator.cpp  instantiation.cpp  instantiation.h  main.cpp  typecheck.cpp  typecheck.h
src/VALfiles/misc/: DYNA.cpp  DYNATranslator.cpp  DYNATranslator.h  LPGP.cpp  LPGPTranslator.cpp  LPGPTranslator.h
src/VALfiles/parsing/: CMakeLists.txt  fixyywrap  fixyywrap.cpp  macros.h  parse_error.h  pddl+.lex  pddl+.yacc  ptree.cpp  ptree.h  sStack.h
src/VALfiles/test/: lex.yy.cc  pddl+.cpp
src/cmake/modules/: FindCBLAS.cmake  FindCLapack.cmake  FindCgl.cmake  FindClp.cmake  FindCoinUtils.cmake  FindLPSolve.cmake
src/popf/: .cvsignore  CMakeLists.txt  FFSolver.cpp  FFSolver.h  Popf.cpp  Popf.hpp  RPGBuilder.cpp  RPGBuilder.h  RPGBuilderAnalysis.cpp  RPGBuilderEvaluation.cpp  RPGBuilderNumerics.cpp  colours.h  globals.cpp  globals.h  lpscheduler.cpp  lpscheduler.h  minimalstate.cpp  minimalstate.h  numericanalysis.cpp  numericanalysis.h  partialordertransformer.cpp  partialordertransformer.h  popfMain.cpp  solver-clp.cpp  solver-clp.h  solver-cpx.cpp  solver-cpx.h  solver.cpp  solver.h  temporalanalysis.cpp  temporalanalysis.h  temporalconstraints.cpp  temporalconstraints.h  totalordertransformer.cpp  totalordertransformer.h
src/popf2/: .cvsignore  .kdev_include_paths  CMakeLists.txt  FFEvent.cpp  FFEvent.h  FFSolver.cpp  FFSolver.h  RPGBuilder.cpp  RPGBuilder.h  RPGBuilderAnalysis.cpp  RPGBuilderEvaluation.cpp  RPGBuilderNumerics.cpp  StochasticDurations.cpp  StochasticDurations.h  UseDoxygen.cmake  colours.h  compressionsafescheduler.cpp  compressionsafescheduler.h  globals.cpp  globals.h  lpscheduler.cpp  lpscheduler.h  minimalstate.cpp  minimalstate.h  numericanalysis.cpp  numericanalysis.h  partialordertransformer.cpp  partialordertransformer.h  popfMain.cpp  solver-clp.cpp  solver-clp.h  solver-cpx-paramils.cpp  solver-cpx.cpp  solver-cpx.h  solver.cpp  solver.h  temporalanalysis.cpp  temporalanalysis.h  temporalconstraints.cpp  temporalconstraints.h  (+2 more)
src/popf2/cmake/modules/: FindCbc.cmake  FindOSI.cmake
